# diary_quest

./: .eslintrc.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  job_error.txt  job_error_ascii.txt  package.json  pnpm-lock.yaml  test_world.md  tsc_output.txt  tsconfig.json  キャラクターステータスサンプル.json  世界観設定サンプル_fantasy.md
.github/workflows/: auto-close-pr.yml  release.yml
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: EquipmentFoundModal.tsx  ErrorBoundary.tsx  SaveResultModal.tsx
apps/desktop/src/hooks/: useAppInitialize.ts
apps/desktop/src/lib/: helpContent.ts  secureStorage.ts  tauri.ts
apps/desktop/src/pages/: CharacterPage.tsx  DiaryPage.tsx  HomePage.tsx  PastDiariesPage.tsx  QuestsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  StoryPage.tsx  WelcomePage.tsx
apps/desktop/src/repositories/: characterRepository.ts  diaryRepository.ts  index.ts  questRepository.ts  reportRepository.ts  storyRepository.ts  worldRepository.ts
apps/desktop/src/schemas/: diarySchema.ts
apps/desktop/src/services/: MockDatabaseService.test.ts  MockDatabaseService.ts  NotificationService.ts  database.ts  llm.ts
apps/desktop/src/store/: characterStore.ts  diaryStore.ts  index.ts  questStore.ts  reportStore.ts  settingsStore.ts  storyStore.ts  worldStore.ts
scripts/: release.mjs
(+7 files in other folders)
