[package]
name = "diary-quest"
version = "0.1.0"
description = "RPG風日記アプリケーション"
authors = ["you"]
license = ""
repository = ""
default-run = "diary-quest"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "system-tray", "dialog-all", "fs-all", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "notification-all"] }
rusqlite = { version = "0.29", features = ["bundled"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
